src/objects/Invoice_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Hrs__c</fullName>
        <label>Invoice Hrs</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Entry</label>
        <referenceTo>Time_Entries__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Line Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>